# football

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  explore_statsbomb.py  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
canvases/: analysis-story.canvas.tsx  wc2022-analysis-story.canvas.tsx
db/: erd.dbml
db/schema/: 00_schemas.sql  01_staging.sql  02_analytics.sql  03_indexes.sql
docs/decisions/: README.md  data-modeling-and-aws.md
docs/performance/: after_events_match_pass_agg.txt  after_fact_cover_player_stats.txt  after_fact_team_match_defense.txt  after_formation_timeline.txt  after_no_cover_events_match_pass_agg.txt  after_no_cover_fact_cover_player_stats.txt  after_no_cover_fact_team_match_defense.txt  after_no_cover_formation_timeline.txt  before_events_match_pass_agg.txt  before_fact_cover_player_stats.txt  before_fact_team_match_defense.txt  before_formation_timeline.txt  comparison_summary.md
docs/snapshots/: README.md  analysis_results.json
explore/: statsbomb_explore.py  statsbomb_wc2022.py
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: analysis.py  analysis_wc2022.py  bootstrap.py  ingest.py  ingest_wc2022.py  init_db.py  run_aggregation.py  run_explain_benchmark.py  run_pipeline.py  validate_erd.py
src/football/: __init__.py  config.py  sql_loader.py
src/football/aggregation/: __init__.py  common.py  fact_player_match_stats.py  team_match_formation.py
src/football/cli/: embed.py  (+7 more)
tests/: test_sql_loader.py
tests/unit/: test_transformers.py
(+18 files in other folders)
