[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "football"
version = "0.1.0"
description = "Football Tactical Intelligence Platform — WC2022 StatsBomb pipeline"
requires-python = ">=3.9"
dependencies = [
    "statsbombpy>=1.19.0",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
